@@ -1,3 +1,9 @@
+2001-01-11  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
+
+	* config/tc-m68hc11.c (md_estimate_size_before_relax):Don't
+	relax weak symbols.
+	(relaxable_symbol): New function. 
+
 2001-01-11  Andreas Jaeger  <aj@suse.de>
 
 	* config/tc-i386.h (TC_RELOC_GLOBAL_OFFSET_TABLE): Removed, it's
